# mikroman

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  fabfile.py  migratedb-dcoker.py  migratedb.py  release-notes.md  reqs.txt  run-docker.sh  run-server.sh  shell.sh
conf/: db.sql  loginscript.sh  server-config.json  uwsgi.ini
migrations/: 001_users.py  002_devices.py  003_sysconfig.py  004_device_groups.py  005_device_groups_devices_rel.py  006_tasks.py  007_events.py  008_backups.py  009_authorization.py  010_account.py  011_user_tasks.py  012_snipppets.py  013_permissions.py  014_user_group_perm.py  015_firmware.py  016_task_group_dev_rel.py  017_task_results.py  018_syslogs.py  019_device_radio.py
py/: bgtasks.py  config.py  main.py  task_run.py
py/api/: api_account.py  api_backups.py  api_dev.py  api_firmware.py  api_logs.py  api_scanner.py  api_snippet.py  api_sysconfig.py  api_user_tasks.py
py/libs/: account.py  red.py  util.py  (+2 more)
py/libs/check_routeros/: .pre-commit-config.yaml  CHANGELOG.md  README.md  check_routeros.py  pyproject.toml
py/libs/check_routeros/routeros_check/: __init__.py  __main__.py  cli.py  context.py  exeption.py  helper.py  resource.py
py/libs/check_routeros/routeros_check/check/: __init__.py  interface.py  interface_gre.py  interface_vrrp.py  routing_bgp_peer.py  routing_ospf_neighbor.py  system_clock.py  system_cpu.py  system_fan.py  system_license.py  system_memory.py  system_ntp_client.py  system_power.py  system_psu.py  system_temperature.py  system_update.py  system_uptime.py  tool_ping.py
scripts/: dbmigrate.py
(+30 files in other folders)
